Make sure quick search buttons don't wrap to next line in header.
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/ApiCommonWebsite/trunk@32518 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/Site/htdocs/assets/css/AllSites.css
+++ b/Site/htdocs/assets/css/AllSites.css
@@ -10,6 +10,9 @@
      (after the order set up in header.tag)
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 
+div#quick-search td {
+  white-space: nowrap;
+}
 
 div.htmltooltip{
   background-color:#FFFFC3;
